--- a/y/index.html
+++ b/y/index.html
@@ -760,7 +760,7 @@
 
         async function loadPredictions() {
             try {
-                const response = await fetch('/api/predictions');
+                const response = await fetch('https://kalyanx-api-1019450684194.us-central1.run.app/api/predictions');
                 const data = await response.json();
 
                 if (data.success && data.predictions.length > 0) {
@@ -832,7 +832,7 @@
 
         async function loadResults() {
             try {
-                const response = await fetch('/api/results');
+                const response = await fetch('https://kalyanx-api-1019450684194.us-central1.run.app/api/results');
                 const data = await response.json();
 
                 if (data.success) {
